chore: update CORS configuration to use List.of for allowed origins and headers